--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,7 @@
     <string name="app_name">ND940C3-Project</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
-
-
+    
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
@@ -17,7 +16,7 @@
 
     <string name="glide_image_library">Glide - Image Loading Library by BumpTech</string>
     <string name="load_app_title">LoadApp - Current repository by Udacity</string>
-    <string name="retrofit_title">Retrofit - Type-safe HTTP client for \n Android and Java by Square, Inc</string>
+    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 
     <string name="toast_message">Please select the file to download</string>
     <string name="downloading_image_content_description">Downloading image</string>
@@ -25,4 +24,7 @@
     <string name="file_name">File name:</string>
     <string name="status">Status:</string>
     <string name="ok">OK</string>
+    
+    <string name="downloading_status_success">Success</string>
+    <string name="downloading_status_failed">Failed</string>
 </resources>
