App crashes when download completes (Nexus 5X, API 32) - checked and fixed No notification displayed (Pixel XL Emulator, API 33) - notification permission system dialog was added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="notification_button">See changes</string>
     <string name="notification_channel_id">channelId</string>
     <string name="notification_channel_name">Downloading</string>
+    <string name="notification_permission_toast_message">Unlock the complete app experience by enabling notifications. With notifications turned on, you will receive real time downloading status.</string>
 
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
